2004-04-11  Carlos Morgado  <chbm gnome.org>

	* libbalsa/Makefile.am: 
	remove *_DISABLE_DEPRECATED

2004-04-11  Pawel Salek

	* libbalsa/mailbox_imap.c: fetch references and list-post. 
	* libbalsa/message.c: remove unused data. Parse sequences of headers.xo
	* libbalsa/imap/imap-commands.[hc]: simplify fetching code.
	* libbalsa/imap/imap-handle.[hc]: handle HEADER.FIELDS.NOT.

2004-04-07  Pawel Salek

	* libbalsa/mailbox_imap.c: do not quit when talking to non-IMAP servers
	* src/sendmsg-window.c: check message_postpone() return code.

2004-04-07 06:55  PeterB

	* libbalsa/imap/pop3.c: free pop->host.
	* libbalsa/: mailbox_local.c, mailbox_maildir.c, mailbox_mbox.c,
	mailbox_mh.c, message.c, message.h: scrap
	LibBalsaMessage::references_for_threading and create the list on
	the fly instead; allocate extra headers in body-ref and deallocate
	them in body-unref.

2004-04-06  Pawel Salek

	* libbalsa/mailbox.c: make nth_child return correct answer for closed
	mailboxes.
	* libbalsa/message.c: simplify prepend_header_misc().
	* libbalsa/imap/pop3.c: gracefully handle timeouts after initial
	greeting but before authentication.

2003-04-05  Emmanuel Allaud

	* src/mailbox-conf.c: fix crash on IMAP mailbox configuration.

2004-04-05  Pawel Salek

	* NEWS, configure.in: release balsa-2.1.2

2004-04-04  Pawel Salek

	* libbalsa/mailbox_local.c: make sure to kill the delayed sync handler
	before closing the mailbox. Lock properly, too.
	* libbalsa/mailbox_pop3.c: cleanup and improve progress indication.
	* libbalsa/imap/pop3.[ch]: armour the code against broken connections.
	* src/main-window.c: change slightly displaying format.

2004-04-03  Pawel Salek

	* libbalsa/imap/pop3.h: implement pipelined pop3 fetching.
	* libbalsa/mailbox_pop3.c: use it.

2004-04-02 06:45  PeterB

	* libbalsa/mailbox_mbox.c: when rewriting the mbox in a sync, use
	g_mime_stream_write_to_stream instead of
	g_mime_message_write_to_stream.

2004-04-01 11:50  PeterB
