@@ -2815,8 +2815,10 @@ sendmsg_window_new(GtkWidget * widget, LibBalsaMessage * message,
 	/* reference the original mailbox so we don't loose the
 	 * mail even if the mailbox is closed.
 	 */
-	if (message->mailbox)
+	if (message->mailbox) {
 	    libbalsa_mailbox_open(message->mailbox);
+            libbalsa_mailbox_set_msg_headers(message->mailbox, message);
+        }
     }
 
     g_signal_connect(G_OBJECT(bsmsg->window), "delete-event",
